--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,7 @@
 }
 
 .cat-btn {
-  @apply mr-4 my-4 text-white font-nunito-sans border-b-[3px] border-r-[3px] disabled:opacity-50;
+  @apply text-white font-nunito-sans border-b-[3px] border-r-[3px] disabled:opacity-50;
   @apply cat-btn-md;
 }
 
