--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,7 +37,7 @@
 }
 
 .cat-btn-teal {
-  @apply bg-teal-500 text-white hover:bg-teal-700 disabled:hover:bg-teal-500 border-b-teal-900 border-r-teal-900;
+  @apply bg-teal-300 text-black hover:bg-teal-500 disabled:hover:bg-teal-300 border-b-teal-900 border-r-teal-900;
 }
 
 .cat-btn-red {
@@ -48,6 +48,13 @@
   @apply bg-gray-500 text-white hover:bg-gray-700 disabled:hover:bg-gray-500 border-b-gray-900 border-r-gray-900;
 }
 
+.cat-btn-light-gray {
+  @apply bg-gray-300 text-black hover:bg-gray-500 disabled:hover:bg-gray-300 border-b-gray-900 border-r-gray-900;
+}
+
+.cat-btn-green {
+  @apply bg-green-500 text-black hover:bg-green-700 disabled:hover:bg-green-500 border-b-green-900 border-r-green-900;
+}
 .cat-btn-red-outline {
   @apply text-red-500 border-red-500 border box-border;
 }
