--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+textarea:focus {
+  @apply outline-gold-500;
+}
+
 .cat-page-title {
   @apply text-2xl font-mulish lowercase;
 }
