--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+button {
+  @apply leading-none;
+}
+
 textarea:focus {
   @apply outline-gold-500;
 }
@@ -29,15 +33,15 @@ textarea:focus {
 }
 
 .cat-btn-sm {
-  @apply px-3 py-1;
-}
-
-.cat-btn-md {
   @apply px-3 py-2;
 }
 
+.cat-btn-md {
+  @apply px-3 py-3;
+}
+
 .cat-btn-lg {
-  @apply px-6 py-3;
+  @apply px-6 py-4;
 }
 
 .cat-btn-gold {
